--- a/directory/templates/index.html
+++ b/directory/templates/index.html
@@ -1,15 +1,14 @@
 {% load staticfiles %}
 
 <!DOCTYPE html>
-
 <html>
 	<head>
-		<META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+		<meta charset="utf-8">
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}" />
 		<link rel="shortcut icon" href="{% static 'images/favicon.png' %}">
 		<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
-		<script type="text/javascript" src="{% static 'js/mapa.js' %}"></script>
+		<script type="text/javascript" src="{% static 'js/mapaeanimations.js' %}"></script>
 	</head>
 	<body>
 		<!-- div Google.Maps -->
@@ -37,8 +36,17 @@
 				<p>Filipe Assun&ccedil&atildeo, Ines Coelho, Jo&atildeo Almeida, Jo&atildeo S&aacute, Pedro Matias e Sandra Pereira.</p>
 				<p>(Site optimizado para Chrome)</p>
 				<br><br>
-				<img style="border:6px double #545565" align="center" src="{% static 'images/coimbratechscene.png' %}" alt="Coimbra Tech Scene" width="50%" onclick="initCloseButtonListener()">
+				<img id="logo" align="center" src="{% static 'images/coimbratechscene.png' %}" width="312" height="95" alt="Coimbra Tech Scene" onclick="initCloseButtonListener()">
 		    </div>
+
+		<!-- HTML para drop down menu -->
+		<div class="drop-menu" id="menuDrop">
+			<span class="plus">&#10010</span> &nbsp; <b>Ordenar por</b>
+			<ul class="sub-menu">
+				<li><button onclick="toggle_type(1)" class="buttonDropMenu" id="alf"><b>Nome</b></button></li>
+				<li><button onclick="toggle_type(0)" class="buttonDropMenu" id="area"><b>Categoria</b></button></li>
+			</ul>
+		</div>
 
 		<!-- div menu principal -->
 		<div id="menu">
@@ -77,35 +85,17 @@
 		</div>
 
 		<div id="numEmpresasMenu">
-			<b>&nbsp; &nbsp;N. Empresas: {{ companies|length }}</b>
-		</div>
-		<div id="numEmpresasMenuSub">
-			<a href="http://www.facebook.com/CoimbraTechScene" target="_blanck"><img style="border:3px double #545565" src="{% static 'images/f_ico.png' %}" title="Facebook" alt="Facebook" width="18%"></a>
-			<a href="javascript:menuInitListener()">
-				<img style="border:3px double #545565" src="{% static 'images/arrowBack.png' %}" title="Menu Inicial" alt="MenuInit" width="18%">
+			<b id="numEmpresasLabel">&nbsp; &nbsp;N. Empresas: {{ companies|length }}</b>
+
+			<a class="thumbicon" href="http://www.facebook.com/CoimbraTechScene" target="_blanck"><img width="20" height="20" src="/static/images/f_ico.png" title="Facebook" alt="Facebook"></a>
+			<a class="thumbicon" href="javascript:menuInitListener()"><img width="20" height="20" src="{% static 'images/home.png' %}" title="Menu Inicial" alt="MenuInit">
 			</a>
-		</div>		
-
-		<!-- HTML para drop down menu -->
-		<div class="drop-menu" id="menuDrop">
-			<span class="plus">&#10010</span> &nbsp; <b>Ordenar por</b>
-			<ul class="sub-menu">
-				<li><button onclick="toggle_type(1)" class="buttonDropMenu" id="alf"><b>Nome</b></button></li>
-				<li><button onclick="toggle_type(0)" class="buttonDropMenu" id="area"><b>Categoria</b></button></li>
-			</ul>
 		</div>
 
-	<script type="text/javascript" src="{% static 'js/animations.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 	<script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
 	<script type="text/javascript">
-		var sc_project=8543362; 
-		var sc_invisible=1; 
-		var sc_security="960bd792"; 
-		var scJsHost = (("https:" == document.location.protocol) ?
-		"https://secure." : "http://www.");
-		document.write("<sc"+"ript type='text/javascript' src='" + scJsHost +
-		"statcounter.com/counter/counter.js'></"+"script>");
+		var sc_project=8543362;var sc_invisible=1;var sc_security="960bd792";var scJsHost=(("https:"==document.location.protocol)?"https://secure.":"http://www.");document.write("<script type='text/javascript' src='"+scJsHost+"statcounter.com/counter/counter.js'><\/script>");
 	</script>
 	<noscript><div class="statcounter"><a title="web counter"
 		href="http://statcounter.com/" target="_blank"><img class="statcounter"
