--- a/directory/templates/index.html
+++ b/directory/templates/index.html
@@ -95,7 +95,7 @@
 	<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 	<script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
 	<script type="text/javascript">
-		var sc_project=8543362;var sc_invisible=1;var sc_security="960bd792";var scJsHost=(("https:"==document.location.protocol)?"https://secure.":"http://www.");document.write("<script type='text/javascript' src='"+scJsHost+"statcounter.com/counter/counter.js'><\/script>");
+		var sc_project=8543362;var sc_invisible=1;var sc_security="960bd792";var scJsHost=(("https:"==document.location.protocol)?"https://secure.":"http://www.");
 	</script>
 	<noscript><div class="statcounter"><a title="web counter"
 		href="http://statcounter.com/" target="_blank"><img class="statcounter"
