--- a/directory/templates/index.html
+++ b/directory/templates/index.html
@@ -50,7 +50,7 @@
 
 		<!-- div menu principal -->
 		<div id="menu">
-				<p><a href="https://docs.google.com/spreadsheet/viewform?formkey=dEIyVG9HdHoyNFE5Y3N6MU02SmdmVnc6MQ" target="_blank" class="button"><b>  Adicionar Empresa</b><span id="zoom">&#10010</span></a></p>
+				<p><a href="https://docs.google.com/spreadsheet/viewform?formkey=dEIyVG9HdHoyNFE5Y3N6MU02SmdmVnc6MQ" style="padding-left: 7px;" target="_blank" class="button"><b>Adicionar Empresa</b><span id="zoom">&#10010</span></a></p>
 				<!-- BY NAME -->			
 				<div id="by_name">
 					{% for dic_name in companies_by_name %}
@@ -94,9 +94,6 @@
 
 	<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 	<script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		var sc_project=8543362;var sc_invisible=1;var sc_security="960bd792";var scJsHost=(("https:"==document.location.protocol)?"https://secure.":"http://www.");
-	</script>
 	<noscript><div class="statcounter"><a title="web counter"
 		href="http://statcounter.com/" target="_blank"><img class="statcounter"
 		src="http://c.statcounter.com/8543362/0/960bd792/1/" alt="web
